working on hyprland

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -50,7 +50,7 @@ $menu = walker
 #$menu = wofi
 $logout = wlogout --protocol layer-shell
 $bar = ~/.config/waybar/start-waybar.sh -c ~/.config/waybar/config -s ~/.config/waybar/style.css
-$mattermost = flatpak run com.mattermost.Desktop workspace:[magic]
+$mattermost = flatpak run com.mattermost.Desktop
 
 # Autostart
 
@@ -59,6 +59,8 @@ exec-once = waypaper --restore
 
 exec-once = $bar
 exec-once=walker --gapplication-service
+
+exec-once = hyprpm reload  -n # Reload plugins
 
 exec-once = hypridle
 exec-once = hyprsunset
@@ -69,7 +71,7 @@ exec-once = systemctl --user start tuned
 exec-once = tuned-adm profile balanced
 exec-once = systemctl --user start hyprpolkitagent
 
-exec-once =  $mattermost
+exec-once =  $mattermost workspace:[magic]
 
 # ==============================================================================
 #                             GENERAL CONFIGURATION
@@ -214,12 +216,6 @@ gestures {
 }
 
 # ==============================================================================
-#                               PLUGINS
-# ==============================================================================
-
-source = ./pluginsconfig/enabled.conf
-
-# ==============================================================================
 #                              WINDOW RULES
 # ==============================================================================
 
@@ -245,7 +241,7 @@ windowrulev2 = center,class:^(org.pulseaudio.pavucontrol)$
 windowrulev2 = workspace 2 silent,class:^(firefox)$
 windowrulev2 = workspace 3 silent,class:^(thunderbird)$
 windowrulev2 = workspace 4 silent,class:^(spotify)$
-windowrulev2 = workspace magic,class:^(com.mattermost.Desktop)
+# windowrulev2 = workspace magic,class:^(com.mattermost.Desktop)
 
 # ==============================================================================
 #                              KEYBINDINGS
@@ -266,7 +262,6 @@ bind = $mainMod, J, togglesplit,
 bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, T, togglegroup
 bind = $mainMod, F, fullscreen
-bind = $mainMod, TAB, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
 
 # Screenshot configuration
 bind = , Print, exec, grim -g "$(slurp -d)" - | wl-copy                                                # Selected area → clipboard
@@ -288,6 +283,13 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+
+# ==============================================================================
+#                               PLUGINS
+# ==============================================================================
+
+source = ./pluginsconfig/enabled.conf
+
 
 # ==============================================================================
 #                              WORKSPACE BINDINGS
@@ -326,7 +328,7 @@ bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
 # Move workspace between monitors
-bind = $mainMod CTRL, left, movecurrentworkspacetomonitor, l
+bind = $mainMod CTRL,   left, movecurrentworkspacetomonitor, l
 bind = $mainMod CTRL, right, movecurrentworkspacetomonitor, r 
 
 # Move/resize windows with mod + LMB/RMB
