--- a/config/hypr/pluginsconfig/hypr-dynamic-cursor.conf
+++ b/config/hypr/pluginsconfig/hypr-dynamic-cursor.conf
@@ -59,7 +59,7 @@ plugin:dynamic-cursors {
         # linear             - a linear function is used
         # quadratic          - a quadratic function is used
         # negative_quadratic - negative version of the quadratic one, feels more aggressive
-        function = linear
+        function = quadratic
     }
 
     # configure shake to find
