--- a/config/hypr/pluginsconfig/hyprexpo.conf
+++ b/config/hypr/pluginsconfig/hyprexpo.conf
@@ -1,7 +1,9 @@
+bind = $mainMod, tab, hyprexpo:expo, toggle # can be: toggle, off/disable or on/enable
+
 plugin:hyprexpo {
         columns = 3
-        gap_size = 5
-        bg_col = rgb(111111)
+        gap_size = 8
+        bg_col = $bg-main
         workspace_method = center current # [center/first] [workspace] e.g. first 1 or center m+1
 
         enable_gesture = true # laptop touchpad
