--- a/config/hypr/pluginsconfig/enabled.conf
+++ b/config/hypr/pluginsconfig/enabled.conf
@@ -1,3 +1,6 @@
+# install the desired plugins with hyprpm
+
+
 source = ./hypr-dynamic-cursor.conf
 # source = ./hyprtasking.conf
 source = ./hyprexpo.conf
