working on hyprland config and install

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -224,13 +224,17 @@ layerrule = blur,wofi
 #  layerrule = blur, swaync 
 
 # Floating rules
+
 windowrulev2 = float,class:^(com.saivert.pwvucontrol)$
 windowrulev2 = float,class:^(org.pulseaudio.pavucontrol)$
+windowrulev2 = float,class:^(kitty)$
+windowrulev2 = float,class:^(firefox)$
+windowrulev2 = float,class:^(thunderbird)$
 windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,title:^(Media viewer)$
 windowrulev2 = float,title:^(Picture-in-Picture)$
 windowrulev2 = float,title:^(Firefox — Sharing Indicator)$
-windowrulev2 = float,class:^org\.mozilla\.firefox$,title:^(Extension: \(Bitwarden Password Manager\).*)$
+windowrulev2 = float,class:^(org\.mozilla\.firefox$,title:^(Extension: \(Bitwarden Password Manager\).*)$
 
 # Size rules
 windowrulev2 = size 800 600,class:^(com.saivert.pwvucontrol)$
