--- a/config/waypaper/config.ini
+++ b/config/waypaper/config.ini
@@ -1,8 +1,8 @@
 [Settings]
 language = en
-folder = ~/Pictures/walls
+folder = ~/workspace/myrepo/dotfiles/walls
 monitors = All
-wallpaper = ~/Pictures/walls/swan.jpg
+wallpaper = ~/workspace/myrepo/dotfiles/walls/swan.jpg
 backend = hyprpaper
 fill = fill
 sort = name
