--- a/home/stego/dotfiles/config/hypr/hyprland.conf
+++ b/home/stego/dotfiles/config/hypr/hyprland.conf
@@ -17,8 +17,8 @@ source = colors.conf
 
 # For dynamic laptop-dock setups
 monitor=eDP-1,preferred,auto,1.25
-monitor=HDMI-A-1,preferred,auto,1
-# monitor=,preferred,auto,1  # for any other monitors
+monitor=HDMI-A-1,preferred,auto-left,1
+monitor=DP-1,preferred,auto-left,1.5  # for any other monitors
 
 # ==============================================================================
 #                            ENVIRONMENT VARIABLES
@@ -45,7 +45,7 @@ env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # Define your favorite apps
 $terminal = kitty
-$fileManager = nautilus
+$fileManager = kitty -e yazi
 $menu = walker
 #$menu = wofi
 $logout = wlogout --protocol layer-shell
@@ -58,6 +58,8 @@ $mattermost = flatpak run com.mattermost.Desktop
 exec-once = waypaper --restore
 
 exec-once = $bar
+
+exec-once = elephant #walker dependency
 exec-once=walker --gapplication-service
 
 exec-once = hyprpm reload  -n # Reload plugins
@@ -206,8 +208,8 @@ master {
 # ==============================================================================
 
 gestures {
-    workspace_swipe = true
-    workspace_swipe_fingers = 3
+    # workspace_swipe = true
+    # workspace_swipe_fingers = 3
     workspace_swipe_distance = 300
     workspace_swipe_invert = true
     workspace_swipe_min_speed_to_force = 30
