--- a/home/stego/dotfiles/config/waypaper/config.ini
+++ b/home/stego/dotfiles/config/waypaper/config.ini
@@ -1,8 +1,8 @@
 [Settings]
 language = en
-folder = ~/workspace/myrepo/dotfiles/walls
+folder = ~/Pictures/walls
 monitors = All
-wallpaper = ~/workspace/myrepo/dotfiles/walls/swan.jpg
+wallpaper = ~/Pictures/walls/swan.jpg
 backend = hyprpaper
 fill = fill
 sort = name
@@ -23,4 +23,5 @@ show_path_in_tooltip = True
 all_subfolders = False
 mpvpaper_sound = False
 mpvpaper_options = 
+zen_mode = False
 
