fixing hyprland elephant package not available

--- a/home/stego/dotfiles/config/hypr/hyprland.conf
+++ b/home/stego/dotfiles/config/hypr/hyprland.conf
@@ -59,7 +59,7 @@ exec-once = waypaper --restore
 
 exec-once = $bar
 
-exec-once = elephant #walker dependency
+# exec-once = elephant #walker dependency (not available in nixpkgs)
 exec-once=walker --gapplication-service
 
 exec-once = hyprpm reload  -n # Reload plugins
