making nvim more usable and trying to fix ly

--- a/home/stego/dotfiles/config/hypr/hyprland.conf
+++ b/home/stego/dotfiles/config/hypr/hyprland.conf
@@ -46,8 +46,7 @@ env = ELECTRON_OZONE_PLATFORM_HINT,auto
 # Define your favorite apps
 $terminal = kitty
 $fileManager = kitty -e yazi
-$menu = walker
-#$menu = wofi
+$menu = vicinae # wofi,walker
 $logout = wlogout --protocol layer-shell
 $bar = ~/.config/waybar/start-waybar.sh -c ~/.config/waybar/config -s ~/.config/waybar/style.css
 $mattermost = flatpak run com.mattermost.Desktop
@@ -60,7 +59,7 @@ exec-once = waypaper --restore
 exec-once = $bar
 
 # exec-once = elephant #walker dependency (not available in nixpkgs)
-exec-once=walker --gapplication-service
+# exec-once=walker --gapplication-service
 
 exec-once = hyprpm reload  -n # Reload plugins
 
