--- a/home/stego/dotfiles/config/waypaper/config.ini
+++ b/home/stego/dotfiles/config/waypaper/config.ini
@@ -3,7 +3,7 @@ language = en
 folder = ~/Pictures/walls
 monitors = All
 wallpaper = ~/Pictures/walls/swan.jpg
-backend = hyprpaper
+backend = swaybg
 fill = fill
 sort = name
 color = #ffffff
