nvidia and nix os only on gnome

--- a/home/stego/dotfiles/config/hypr/hyprland.conf
+++ b/home/stego/dotfiles/config/hypr/hyprland.conf
@@ -18,7 +18,11 @@ source = colors.conf
 # For dynamic laptop-dock setups
 monitor=eDP-1,preferred,auto,1.25
 monitor=HDMI-A-1,preferred,auto-left,1
-monitor=DP-1,preferred,auto-left,1.5  # for any other monitors
+monitor=DP-2,3440x1440@144,512x0,1
+monitor=DP-1,preferred,auto-left,1  # for any other monitors
+
+# Virtual monitor che clona il principale
+monitor=Virtual-1,preferred,mirror,DP-2,force_fullscreen_repaint
 
 # ==============================================================================
 #                            ENVIRONMENT VARIABLES
@@ -46,9 +50,10 @@ env = ELECTRON_OZONE_PLATFORM_HINT,auto
 # Define your favorite apps
 $terminal = kitty
 $fileManager = kitty -e yazi
-$menu = vicinae # wofi,walker
+$menu =  wofi # vicinae,walker
 $logout = wlogout --protocol layer-shell
-$bar = ~/.config/waybar/start-waybar.sh -c ~/.config/waybar/config -s ~/.config/waybar/style.css
+# $bar = ~/.config/waybar/start-waybar.sh -c ~/.config/waybar/config -s ~/.config/waybar/style.css
+$bar = waybar
 $mattermost = flatpak run com.mattermost.Desktop
 
 # Autostart
