--- a/home/stego/dotfiles/config/hypr/pluginsconfig/enabled.conf
+++ b/home/stego/dotfiles/config/hypr/pluginsconfig/enabled.conf
@@ -1,7 +1,7 @@
 # install the desired plugins with hyprpm
 
 
-source = ./hypr-dynamic-cursor.conf
+# source = ./hypr-dynamic-cursor.conf
 # source = ./hyprtasking.conf
-source = ./hyprexpo.conf
+# source = ./hyprexpo.conf
 # source = ./hyprspace.conf
