--- a/home/stego/dotfiles/config/opencode/config.json
+++ b/home/stego/dotfiles/config/opencode/config.json
@@ -8,9 +8,10 @@
         "baseURL": "http://localhost:11434/v1"
       },
       "models": {
-        "qwen3:8b": { "name": "Qwen 3 (8B)" }
+        "qwen3:8b": {
+          "name": "Qwen 3 (8B)"
+        }
       }
     }
   }
 }
-
